--- a/styles.css
+++ b/styles.css
@@ -260,10 +260,9 @@ svg {
   fill: var(--first-color);
   filter: drop-shadow(0 12px 12px hsla(var(--hue), 100%, 40%, 0.2));
 }
-/* .home__img{
-    width: 1000px;
-    transform: translate(-120px);
-} */
+.home__img {
+  filter: drop-shadow(-0.5rem 3rem 2rem hsla(0, 0%, 0%, 0.3));
+}
 .button {
   display: inline-block;
   background-color: var(--first-color);
@@ -292,6 +291,9 @@ svg {
 }
 .about__image {
   justify-self: center;
+}
+.about__img {
+  filter: drop-shadow(-0.5rem 3rem 2rem hsla(0, 0%, 0%, 0.3));
 }
 .about__blob {
   width: 320px;
