--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ svg {
 .container {
   max-width: 1120px;
   margin-inline: 1.5rem;
+  margin-bottom: 2rem;
 }
 .grid {
   display: grid;
@@ -383,7 +384,7 @@ svg {
 }
 .projects__container {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
   row-gap: 2rem;
@@ -396,9 +397,9 @@ svg {
   transition: border 0.4s;
 }
 
-.projects__card:not(:last-child) {
+/* .projects__card:not(:last-child) {
   margin-right: 2rem;
-}
+} */
 .projects__card:hover {
   border: 2px solid var(--first-color);
 }
