--- a/app/globals.css
+++ b/app/globals.css
@@ -21,12 +21,16 @@
     @apply w-[100vw];
     @apply overflow-x-clip;
     @apply font-normal;
-    @apply text-primary-dark;
+    @apply text-primary-light;
+    @apply dark:text-primary-dark;
     @apply text-[1.2rem];
     @apply xs:text-[1.6rem];
     @apply leading-[150%];
-    @apply bg-background-dark;
+    @apply bg-background-light;
+    @apply dark:bg-background-dark;
     @apply font-normal;
+    @apply transition-colors;
+    @apply duration-1000;
   }
 }
 
@@ -45,13 +49,14 @@
   .hashnode-content-style {
     @apply prose;
     @apply break-words;
-    @apply text-primary-dark;
+    @apply text-primary-light;
+    @apply dark:text-primary-dark;
     @apply first:prose-p:mt-0;
     @apply prose-img:max-w-full;
     @apply prose-p:leading-snug;
     @apply prose-a:underline;
+    @apply hover:prose-a:text-accent-light;
     @apply dark:hover:prose-a:text-accent-dark;
-    @apply dark:text-primary-dark;
     @apply prose-blockquote:leading-snug;
     @apply prose-a:leading-snug;
     @apply prose-figure:leading-snug;
