chore: next update 15 -> 16

--- a/app/globals.css
+++ b/app/globals.css
@@ -197,7 +197,7 @@
     @apply rounded-full;
   }
 
-  ::sc ::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track {
     @apply bg-background-light;
     @apply dark:bg-background-dark;
   }
